Open java.lang in tests for now